Agregados frames lectores de video y audio y corrreciones en el lector pdf para abrir un archivos subido. Correciones en codigo.